@@ -51,6 +51,7 @@ typedef HRESULT (STDAPICALLTYPE DrawThemeTextProc)(HTHEME hTheme, HDC hdc,
 		 int iPartId, int iStateId, LPCWSTR pszText, int iCharCount,
 		 DWORD dwTextFlags, DWORD dwTextFlags2, const RECT *pRect);
 typedef BOOL    (STDAPICALLTYPE IsThemeActiveProc)(VOID);
+typedef BOOL    (STDAPICALLTYPE IsAppThemedProc)(VOID);
 
 typedef struct
 {
@@ -60,7 +61,8 @@ typedef struct
     DrawThemeBackgroundProc		*DrawThemeBackground;
     DrawThemeTextProc		        *DrawThemeText;
     GetThemeTextExtentProc		*GetThemeTextExtent;
-    IsThemeActiveProc                   *IsThemeActive;
+    IsThemeActiveProc			*IsThemeActive;
+    IsAppThemedProc			*IsAppThemed;
 
     HWND                                stubWindow;
 } XPThemeProcs;
@@ -124,6 +126,7 @@ LoadXPThemeProcs(HINSTANCE *phlib)
 		&& LOADPROC(GetThemeTextExtent)
 		&& LOADPROC(DrawThemeText)
 		&& LOADPROC(IsThemeActive)
+		&& LOADPROC(IsAppThemed)
 	    )
 	    {
 		return procs;
@@ -153,7 +156,9 @@ static int
 XPThemeEnabled(Ttk_Theme theme, void *clientData)
 {
     XPThemeData *themeData = clientData;
-    return themeData->procs->IsThemeActive();
+    int active = themeData->procs->IsThemeActive();
+    int themed = themeData->procs->IsAppThemed();
+    return (active && themed);
 }
 
 /*
